--- a/WebBTL/Views/Products/Index.cshtml
+++ b/WebBTL/Views/Products/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="container-fluid bgtop2 ">
         <nav class="navbar navbar-expand-lg bg-warning  fixed-top">
             <div class="container ">
-                <a class="navbar-brand " href="#"><img src="~/Content/images/logo.png" alt="Alternate Text" style="width:100; max-width:100px;"/></a>
+                <a class="navbar-brand " href="#"><img src="~/Content/images/logo.png" alt="Alternate Text" style="width:100; max-width:100px;" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,7 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Service</a>
                             </li>
-
+                            <li class="nav-item">
+                                <a class="nav-link" href="/tblTinTuc/Index">Tin tức</a>
+                            </li>
                         </ul>
                         <div class="d-flex justify-content-center align-items-center gap-3">
                             <a href="#" class="text-decoration-none text-black">Login</a>
@@ -47,9 +49,9 @@
             </div>
         </nav>
     </div>
-} 
+}
 
-<section  style="margin-top:150px">
+<section style="margin-top:150px">
 
     <div class="container">
         <div class="row">
