--- a/WebBTL/Views/tblTinTuc/Index.cshtml
+++ b/WebBTL/Views/tblTinTuc/Index.cshtml
@@ -30,7 +30,7 @@
                                 <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="/Pages/About">About</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/Products/Index">Product</a>
