--- a/WebBTL/Views/Home/About.cshtml
+++ b/WebBTL/Views/Home/About.cshtml
@@ -1,9 +1,9 @@
-﻿@{
+﻿@model WebBTL.Models.Page
+
+@{
     ViewBag.Title = "About";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
-</main>
+<div class="container">
+   @Model.Contents
+</div>
